# voxelpizza-rs

./: Cargo.toml
.cargo/: config.toml
assets/shaders/: vertex_pulling.wgsl
crates/aabb_render/: Cargo.toml  cuboids.rs  material.rs
crates/aabb_render/examples/: bloom.rs  wave.rs
crates/aabb_render/vertex_pulling/: index_buffer.rs  pipeline.rs  plugin.rs  prepare.rs  queue.rs
crates/client/: Cargo.toml  main.rs
crates/client/examples/: bloom.rs  wave.rs
crates/collections/: Cargo.toml  index_map.rs  lib.rs  pack_storage.rs  pack_vec.rs  subslice.rs
crates/collections/pack/: iter.rs  mod.rs  order.rs  span.rs  unpack_op.rs  vec.rs
crates/collections/pack_span/: iter.rs  mod.rs  pack_op.rs  unpack_op.rs
crates/iters/: Cargo.toml  lib.rs  search.rs
crates/pack/: Cargo.toml  iter.rs  lib.rs  order.rs  pack_op.rs  part.rs  span.rs  unpack_op.rs  vec.rs
crates/raw_vec/: Cargo.toml  lib.rs  tests.rs
crates/render/: Cargo.toml  clipping_planes.rs  cuboids.rs  lib.rs
crates/render/vertex_pulling/: cuboid_cache.rs  draw.rs  extract.rs  index_buffer.rs  pipeline.rs  plugin.rs  prepare.rs
crates/world/: Cargo.toml  lib.rs
crates/world/block/: mod.rs
crates/world/chunk/: mod.rs  palette.rs
crates/world/dimension/: mod.rs
crates/world/region/: mod.rs
examples/: bloom.rs  wave.rs
src/: cuboids.rs  material.rs
src/vertex_pulling/: draw.rs  extract.rs  index_buffer.rs  pipeline.rs  plugin.rs  queue.rs
