[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
  "crates/*",
]

[profile.test]
opt-level = 2
debug-assertions = false

# TODO: Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "file_watcher", 
  "dynamic_linking", 
  "multi_threaded",
  "embedded_watcher"
]

[workspace.dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
rand = "0.8.5"
rand_xoshiro = "0.6"
smooth-bevy-cameras = "0.13"
num-traits = "0.2"
seq-macro = "0.3"
