[package]
name = "aabb_render"
edition.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "multi_threaded"] }
smooth-bevy-cameras = { workspace = true }

bytemuck = { workspace = true }

[[example]]
name = "bloom"
required-features = ["bevy/tonemapping_luts"]