[package]
name = "aabb_render"
edition.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
smooth-bevy-cameras = { workspace = true }

bytemuck = { workspace = true }

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_window",
    "tonemapping_luts",
    "x11",
]

[[example]]
name = "bloom"
required-features = ["bevy/tonemapping_luts"]
