[package]
name = "client"
edition.workspace = true

[[bin]]
path = "./main.rs"
name = "client"

[features]
trace = ["bevy/trace_chrome"]

[dependencies]
render = { path = "../render" }
world = { path = "../world" }
iters = { path = "../iters" }

smooth-bevy-cameras = { workspace = true }
bevy = { workspace = true }

[[example]]
name = "bloom"
required-features = ["bevy/tonemapping_luts"]