[package]
name = "client"
edition.workspace = true

[[bin]]
path = "./main.rs"
name = "client"

[features]
trace = ["bevy/trace_chrome"]

[dependencies]
render = { path = "../render" }
world = { path = "../world" }
iters = { path = "../iters" }

bevy = { workspace = true }
smooth-bevy-cameras = { workspace = true }