[package]
name = "client"
edition.workspace = true

[[bin]]
path = "./main.rs"
name = "client"

[features]
trace = ["bevy/trace_chrome"]

[dependencies]
render = { path = "../render" }
world = { path = "../world" }
iters = { path = "../iters" }

smooth-bevy-cameras = { workspace = true }

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_window",
    "x11",
]
