[package]
name = "world"
edition.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
collections = { path = "../collections" }
pack = { path = "../pack" }
iters = { path = "../iters" }

bevy = { workspace = true }

bytemuck = { workspace = true }
num-traits = { workspace = true }
seq-macro = { workspace = true }
